# scBAMpler

./: .gitignore  README.md  build_dict.py  downsampling_functions.py  perform_sampling.py  pyproject.toml  scBAMpler.py  setup.py
helper_scripts/peak_calling/: call_peak_functions.R  call_peaks.R  install_R_packages.R  macs_env.yml  setup.sh
src/scBAMpler/: build_dict.py  downsampling_functions.py  generateBAM.py  perform_sampling.py  scBAMpler.py
test_data/: fetch_testdata.txt
