[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scBAMpler"
version = "0.1"
description = "A CLI tool for sampling scATAC BAM files"
requires-python = ">=3.7"
dependencies = [
    "pysam",
    "pandas",
    "numpy"
]

[project.scripts]
scBAMpler = "scBAMpler.scBAMpler:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
